--- a/bin/pom.xml
+++ b/bin/pom.xml
@@ -47,9 +47,10 @@
 		<version>3.0.0</version>
 	</dependency>
 	<dependency>
-    	<groupId>org.codehaus.mojo</groupId>
-    	<artifactId>findbugs-maven-plugin</artifactId>
-    	<version>3.0.4</version>
+		<groupId>org.codehaus.mojo</groupId>
+		<artifactId>findbugs-maven-plugin</artifactId>
+		<version>3.0.6-SNAPSHOT</version>
+		<type>maven-plugin</type>
 	</dependency>
 	<dependency>
 	    <groupId>com.puppycrawl.tools</groupId>
@@ -65,6 +66,11 @@
 			<groupId>org.mortbay.jetty</groupId>
 			<artifactId>maven-jetty-plugin</artifactId>
 		</plugin>
+		<plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+	        <artifactId>findbugs-maven-plugin</artifactId>
+	        <version>3.0.6-SNAPSHOT</version>
+      </plugin>
 	</plugins>
   </build>
   <reporting>
@@ -72,7 +78,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>findbugs-maven-plugin</artifactId>
-        <version>3.0.4</version>
+        <version>3.0.6-SNAPSHOT</version>
       </plugin>
     </plugins>
   </reporting>
